--- a/package.json
+++ b/package.json
@@ -2,25 +2,43 @@
   "name": "controle-estoque-10.07-1.1",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "description": "App de controle de estoque com DB na nuvem",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "node server.js"
+ },
+  "keywords":[
+    "almoxarifado",
+    "node.js",
+    "express",
+    "postgresql",
+    "gemini-api"],
+  "author": "Alessandro",
+  "licence": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
     "@google/genai": "^1.4.0",
-    "eventemitter3": "^5.0.1",
-    "qrcode": "1.5.3",
-    "jsqr": "1.4.0",
-    "lodash": "^4.17.21",
     "classnames": "^2.5.1",
-    "zustand": "^5.0.6",
+    "dotenv": "^16.4.5",
+    "eventemitter3": "^5.0.1",
+    "express": "^4.19.2",
     "jspdf": "2.5.1",
     "jspdf-autotable": "3.8.2",
-    "xlsx": "0.18.5"
+    "jsqr": "1.4.0",
+    "lodash": "^4.17.21",
+    "pg": "^8.12.0",
+    "qrcode": "1.5.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "xlsx": "0.18.5",
+    "zustand": "^5.0.6",
+    "cors": "^2.8.5",
+    "@google/generative-ai": "0.24.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
